# airwork

./: CLAUDE.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: gis-ui-interface-map.md
docs/superpowers/: platform-capability-matrix.md
docs/superpowers/plans/: 2026-04-02-workitems-dashboard-redesign.md  2026-04-03-gis-analysis-plan.md  2026-04-03-gis-assembler-plan.md  2026-04-03-gis-editing-plan.md  2026-04-03-gis-gdal-integration-plan.md  2026-04-03-gis-integration-plan.md  2026-04-03-gis-map-plan.md  2026-04-03-platform-phase1-truth-alignment.md  2026-04-03-primary-workspace-ui-fusion-plan.md
docs/superpowers/specs/: 2026-04-03-gis-enhancement-design.md  2026-04-03-gis-gdal-integration-design.md  2026-04-03-platform-audit-roadmap-design.md  2026-04-03-ui-benchmark-fusion-design.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/wif-ai/: Cargo.toml
src-tauri/crates/wif-ai/src/: client.rs  egress.rs  error.rs  lib.rs  prompt_loader.rs  service.rs
src-tauri/crates/wif-core/: Cargo.toml
src-tauri/crates/wif-core/src/: app_state.rs  error.rs  lib.rs  modules.rs
src-tauri/crates/wif-data/: Cargo.toml
src-tauri/crates/wif-data/src/: connection.rs  lib.rs
src-tauri/crates/wif-data/src/migrations/: mod.rs  v001_initial.rs
src-tauri/crates/wif-data/src/repositories/: ai_profile_repo.rs  attachment_repo.rs  contact_repo.rs  gis_feature_repo.rs  gis_layer_repo.rs  mail_account_repo.rs  mail_message_repo.rs  mod.rs  proposal_repo.rs  util.rs  work_item_repo.rs
src-tauri/crates/wif-docs/: Cargo.toml
src-tauri/crates/wif-docs/src/: error.rs  lib.rs  metadata.rs  traits.rs
src-tauri/crates/wif-docs/src/exporters/: csv.rs  mod.rs
src-tauri/crates/wif-docs/src/processors/: csv.rs  mod.rs  text.rs  xlsx.rs
src-tauri/crates/wif-domain/: Cargo.toml
src-tauri/crates/wif-domain/src/: lib.rs
src-tauri/crates/wif-domain/src/entities/: ai_profile.rs  attachment.rs  contact.rs  gis_feature.rs  gis_layer.rs  identity.rs  mail_account.rs  mail_message.rs  mod.rs  proposal.rs  work_event.rs  work_item.rs
src-tauri/crates/wif-domain/src/enums/: mod.rs
src-tauri/crates/wif-domain/src/repository/: ai_profile_repo.rs  attachment_repo.rs  contact_repo.rs  gis_repo.rs  mail_repo.rs  mod.rs  work_item_repo.rs
src-tauri/crates/wif-domain/src/value_objects/: egress_policy.rs  mod.rs
src-tauri/crates/wif-gis/: Cargo.toml
src-tauri/crates/wif-gis/src/: error.rs  lib.rs  measure.rs
src-tauri/crates/wif-gis/src/coordinate/: mod.rs  transform.rs
src-tauri/crates/wif-gis/src/map/: mod.rs  service.rs  tile_source.rs
src-tauri/crates/wif-gis/src/raster/: info.rs  mod.rs
src-tauri/crates/wif-gis/src/vector/: analysis.rs  geojson_io.rs  mod.rs
src-tauri/crates/wif-mail/: Cargo.toml
src-tauri/crates/wif-mail/src/: error.rs  html_extract.rs  lib.rs  oauth.rs  send.rs  service.rs  sync.rs
src-tauri/crates/wif-search/: Cargo.toml
src-tauri/crates/wif-search/src/: error.rs  hybrid.rs  keyword.rs  lib.rs  service.rs  types.rs  vector.rs
src-tauri/src/: lib.rs  main.rs
src/components/: AiAnalysisPanel.tsx  DashboardOverview.tsx  GisView.tsx  InboxView.tsx  SettingsView.tsx  SubNav.tsx  WorkItemForm.tsx
src/components/__tests__/: WorkItemForm.test.tsx
src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
src/components/settings/: AiProfileForm.tsx  MailAccountForm.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx
src/components/ui/__tests__/: Badge.test.tsx  Button.test.tsx  Modal.test.tsx
src/hooks/: useTauriInvoke.ts
src/pages/: FootballDashboard.tsx  RevenueDashboard.tsx  UtilityDashboard.tsx
src/services/: api.ts
src/services/__tests__/: api.test.ts
src/test/: setup.ts
src/types/: domain.ts
