[package]
name = "wif-mail"
description = "邮件集成 — IMAP/SMTP、OAuth2 (Google/Microsoft)、IDLE 推送"
version.workspace = true
edition.workspace = true

[dependencies]
wif-domain = { path = "../wif-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
reqwest = { version = "0.12", features = ["json"] }
ulid = { workspace = true }
